fixed nav button z-index

--- a/css/_parts/_nav.scss
+++ b/css/_parts/_nav.scss
@@ -2,6 +2,7 @@
     appearance: none;
     border: 0;
     position: fixed;
+    z-index: 1100;
     top: 2rem;
     right: 2rem;
     width: 3rem;
