--- a/css/ss-12.css
+++ b/css/ss-12.css
@@ -130,6 +130,7 @@ p {
   appearance: none;
   border: 0;
   position: fixed;
+  z-index: 1100;
   top: 2rem;
   right: 2rem;
   width: 3rem;
